--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -90,7 +90,7 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
 
     <hr/>
 
-    <div class="button-panel">
+    <div class="button-group">
       <button id="add-note" class="btn-link">Add Note</button>
       <button id="toggle-notes" class="button-toggle btn-link">Notes (0)</button>
     </div>
@@ -121,7 +121,7 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
 
       <hr/>
 
-      <div class="button-panel">
+      <div class="button-group">
         <input id="file" type='file' hidden/>
         <button onclick="loadLocalData()" class="btn-link">Load</button>
         <button onclick="saveLocalData()" class="btn-link">Save</button>
