--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:site_name" content="Joric" />
 <meta property="og:type" content="object" />
 <meta property="og:title" content="Joric's Maps" />
-<meta property="og:description" content="Interactive Map" />
+<meta property="og:description" content="Interactive Maps" />
 <link rel="icon" href="data:,">
 </head>
 <body>
