--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <li><a href="https://joric.github.io/supraland">Supraland</a> (all 3 games)</li>
 <li><a href="https://joric.github.io/supraland/3d">Supraland 3D</a> (all 3 games)</li>
 <li><a href="fallout-london/">Fallout London</a></li>
+<li><a href="https://joric.github.io/stalker">Stalker 2</a></li>
 </ui>
 </body>
 </html>
