--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -876,7 +876,7 @@ function jumpToLocation(name) {
 }
 
 function popupOnClick(e) {
-  console.log('clicked', e.target.properties);
+  //console.log('clicked', e.target.properties);
 
   let marker = e.target;
   let o = marker.properties;
