--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <h1>Joric's Maps</h1>
 <ul>
-<li><a href="https://joric.github.io/viva-games">ZX Spectrum Games</a></li>
+<li><a href="https://joric.github.io/viva-games">Viva Games (ZX Spectrum)</a></li>
 <li><a href="https://joric.github.io/supraland">Supraland</a> (all 3 games)</li>
 <li><a href="https://joric.github.io/supraland/3d">Supraland 3D</a> (all 3 games)</li>
 <li><a href="fallout-london/">Fallout London</a></li>
