--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Joric's Maps</title>
+<meta name="description" content="Joric's Interactive Maps" />
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="og:image" content="https://img.youtube.com/vi/7fkqMHoESr8/hqdefault.jpg" />
