--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 <h1>Joric's Maps</h1>
+<h2>Interactive Maps</h2>
 <ul>
 <li><a href="https://joric.github.io/viva-games">Viva Games</a> (ZX Spectrum)</li>
 <li><a href="https://joric.github.io/supraland">Supraland</a> (all 3 games)</li>
