--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <head>
 <meta charset="utf-8">
 <title>Joric's Maps</title>
+
 <meta name="description" content="Joric's Interactive Maps" />
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta property="og:image" content="https://img.youtube.com/vi/7fkqMHoESr8/hqdefault.jpg" />
+<meta name="description" content="Joric's Interactive Maps">
+<meta name="keywords" content="Supraland Interactive Map, Fallout London Interactive Map, Stalker 2 Interactive Map, Windlands Interactive Map">
+<meta name="author" content="Joric">
+
+<meta property="og:image" content="https://repository-images.githubusercontent.com/839874981/63788419-de37-4f9b-b0de-478b843a48d0" />
 <meta property="og:site_name" content="Joric" />
 <meta property="og:type" content="object" />
 <meta property="og:title" content="Joric's Maps" />
-<meta property="og:description" content="Interactive Maps" />
+<meta property="og:description" content="Joric's Interactive Maps" />
+
 <link rel="icon" href="data:,">
 </head>
 <body>
 <h1>Joric's Maps</h1>
-<h2>Interactive Maps</h2>
 <ul>
 <li><a href="https://joric.github.io/viva-games">Viva Games</a> (ZX Spectrum)</li>
 <li><a href="https://joric.github.io/supraland">Supraland</a> (all 3 games)</li>
