--- a/src/controls/markers-control/index.html
+++ b/src/controls/markers-control/index.html
@@ -15,10 +15,9 @@
 body { background-color: #aaa; }
 .topleft {
   display: flex;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  padding: 8px;
+
 }
 </style>
 
