--- a/src/controls/markers-control/index.html
+++ b/src/controls/markers-control/index.html
@@ -18,6 +18,10 @@ body { background-color: #aaa; }
   align-items: flex-start;
   padding: 8px;
 
+  top: 50%;
+  left: 45%;
+  position: absolute;
+
 }
 </style>
 
