--- a/src/controls/index.html
+++ b/src/controls/index.html
@@ -53,9 +53,10 @@ body {
 
 <body>
 <select id="themeCtrl" name=theme onchange="location.hash=this.value;window.onload()">
-<option></option>
-<option>glass</option>
-<option>retro</option>
+<option value="">Select Theme</option>
+<option value="">default</option>
+<option value="glass">glass</option>
+<option value="retro">retro</option>
 </select>
 
 <div class="controls-topleft"/>
