--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel="icon" href="data:,">
 </head>
 <body>
-<h1>Joric's Maps</h1>
+<h1>Joric's Interactive Maps</h1>
 <ul>
 <li><a href="https://joric.github.io/viva-games">Viva Games</a> (ZX Spectrum)</li>
 <li><a href="https://joric.github.io/supraland">Supraland</a> (all 3 games)</li>
