--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Joric's Fallout London</title>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta property="og:image" content="images/thumbnail.jpg" />
+<title>Joric's Fallout London</title>
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath d='M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zm306.7 69.1L162.4 380.6c-19.4 7.5-38.5-11.6-31-31l55.5-144.3c3.3-8.5 9.9-15.1 18.4-18.4l144.3-55.5c19.4-7.5 38.5 11.6 31 31L325.1 306.7c-3.2 8.5-9.9 15.1-18.4 18.4zM288 256a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z'/%3E%3C/svg%3E" />
+
+<meta property="og:image" content="https://joric.github.io/maps/fallout-london/images/thumbnail.jpg" />
 <meta property="og:site_name" content="Joric" />
 <meta property="og:type" content="object" />
 <meta property="og:title" content="Joric's Fallout London" />
 <meta property="og:description" content="Interactive Map" />
-<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath d='M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zm306.7 69.1L162.4 380.6c-19.4 7.5-38.5-11.6-31-31l55.5-144.3c3.3-8.5 9.9-15.1 18.4-18.4l144.3-55.5c19.4-7.5 38.5 11.6 31 31L325.1 306.7c-3.2 8.5-9.9 15.1-18.4 18.4zM288 256a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z'/%3E%3C/svg%3E" />
+
 <link rel="search" type="application/opensearchdescription+xml" href="https://joric.github.io/maps/fallout-london/opensearch.xml" title="Joric's Fallout London" />
 <link rel="stylesheet" href="main.css">
 
