--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -10,7 +10,7 @@
   <p><a href="https://joric.github.io/folon/">https://joric.github.io/folon/</a></p>
   <p>Please update your bookmarks or links.</p>
 
-  <p>You can download the old map save <a href="#" id="dl">here</a>.</p>
+  <p>To download the old map save, click <a href="#" id="dl">here</a>.</p>
 
   <script>
     document.getElementById('dl').onclick = e => {
