--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>301 Moved Permanently</title>
+  <meta http-equiv="refresh" content="5;url=https://joric.github.io/folon">
   <link rel="canonical" href="https://joric.github.io/folon/">
 </head>
 <body>
