--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -14,6 +14,8 @@
 
   <p>To download the old map save, click <a href="#" id="dl">here</a>.</p>
 
+  <p>Redirecting in 5 seconds...</p>
+
   <script>
     document.getElementById('dl').onclick = e => {
       e.preventDefault();
