--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -5,6 +5,11 @@
   <title>301 Moved Permanently</title>
   <meta http-equiv="refresh" content="5;url=https://joric.github.io/folon/">
   <link rel="canonical" href="https://joric.github.io/folon/">
+  <script>
+    if (location.hash && location.hash.length > 1) {
+      location.href = 'https://joric.github.io/folon/' + location.hash;
+    }
+  </script>
 </head>
 <body>
   <h1>301 Moved Permanently</h1>
