--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -17,7 +17,7 @@
   <p><a href="https://joric.github.io/folon/">https://joric.github.io/folon/</a></p>
   <p>Please update your bookmarks or links.</p>
 
-  <p>To download the old map save, click <a href="#" id="dl">here</a>.</p>
+  <p>To download the old map settings, click <a href="#" id="dl">here</a>.</p>
 
   <p>Redirecting in 5 seconds...</p>
 
