--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li><a href="https://joric.github.io/viva-games">Viva Games</a> (ZX Spectrum)</li>
 <li><a href="https://joric.github.io/supraland">Supraland</a> (all 3 games)</li>
 <li><a href="https://joric.github.io/supraland/3d">Supraland 3D</a> (all 3 games)</li>
-<li><a href="fallout-london/">Fallout London</a></li>
+<li><a href="https://joric.github.io/folon">Fallout London</a></li>
 <li><a href="https://joric.github.io/stalker">Stalker 2</a></li>
 <li><a href="https://joric.github.io/colormap">Color Map</a></li>
 <li><a href="https://joric.github.io/windlands">Windlands 2</a></li>
