--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -15,12 +15,9 @@
   <h1>301 Moved Permanently</h1>
   <p>This page has moved to a new location:</p>
   <p><a href="https://joric.github.io/folon/">https://joric.github.io/folon/</a></p>
-  <p>Please update your bookmarks or links.</p>
-
+  <p>Please update your bookmarks.</p>
   <p>To download the old map settings, click <a href="#" id="dl">here</a>.</p>
-
   <p>Redirecting in 5 seconds...</p>
-
   <script>
     document.getElementById('dl').onclick = e => {
       e.preventDefault();
