--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>301 Moved Permanently</title>
-  <meta http-equiv="refresh" content="5;url=https://joric.github.io/folon/">
+  <meta http-equiv="refresh" content="1;url=https://joric.github.io/folon/">
   <link rel="canonical" href="https://joric.github.io/folon/">
   <script>
     if (location.hash && location.hash.length > 1) {
@@ -16,7 +16,7 @@
   <p>This page has moved to a new location:</p>
   <h2><a href="https://joric.github.io/folon/">https://joric.github.io/folon/</a></h2>
   <p>Please update your bookmarks.</p>
-  <p>Redirecting in 5 seconds...</p>
+  <p>Redirecting in a second...</p>
 </body>
 </html>
 
